--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@
 # Ignore all files in test except CMakeLists.txt and main.cpp
 /tests/*
 !/tests/main.cpp
-!/test/CMakeLists.txt
+!/tests/CMakeLists.txt
