added enums.h to the list of exported headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_INSTALL_PREFIX $ENV{PREFIX})
 include(GNUInstallDirs)
 
 set(SRC_PATH src)
-set(HEADERS ${SRC_PATH}/engine.h ${SRC_PATH}/core.h ${SRC_PATH}/constants.h)
+set(HEADERS ${SRC_PATH}/engine.h ${SRC_PATH}/core.h ${SRC_PATH}/constants.h ${SRC_PATH}/enums.h)
 set(SOURCES ${SRC_PATH}/core.cpp)
 
 set(LIBS SDL2::SDL2)
