initial try to port to SDL3 (mostly renames)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,11 @@ project(supernova)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-option(ENABLE_IMAGE "Enables SDL_image support." ON)
-option(ENABLE_MIXER "Enables SDL_mixer support." ON)
-option(ENABLE_TTF "Enables SDL_ttf support." ON)
-option(ENABLE_NET "Enables SDL_net support." ON)
+# The satellite libs are not built by default as they are not ready yet
+option(ENABLE_IMAGE "Enables SDL_image support." OFF)
+option(ENABLE_MIXER "Enables SDL_mixer support." OFF)
+option(ENABLE_TTF "Enables SDL_ttf support." OFF)
+option(ENABLE_NET "Enables SDL_net support." OFF)
 
 if (NOT ANDROID)
 	set(CMAKE_INSTALL_PREFIX $ENV{PREFIX})
@@ -25,17 +26,17 @@ set(HEADERS
 )
 set(SOURCES ${SRC_PATH}/core.cpp)
 
-set(LIBS SDL2::SDL2)
+set(LIBS SDL3::SDL3)
 
 if (NOT ANDROID)
-	find_package(SDL2 REQUIRED)
+	find_package(SDL3 REQUIRED)
 endif()
 
 if (ENABLE_IMAGE)
 	if (NOT ANDROID)
-		find_package(SDL2_image REQUIRED)
+		find_package(SDL3_image REQUIRED)
 	endif()
-	list(APPEND LIBS SDL2_image::SDL2_image)
+	list(APPEND LIBS SDL3_image::SDL3_image)
 	add_compile_definitions(${PROJECT_NAME} IMAGE_ENABLED)
 	list(APPEND SOURCES ${SRC_PATH}/graphics.cpp)
 	list(APPEND HEADERS ${SRC_PATH}/graphics.h)
@@ -43,9 +44,9 @@ endif()
 
 if (ENABLE_MIXER)
 	if (NOT ANDROID)
-		find_package(SDL2_mixer REQUIRED)
+		find_package(SDL3_mixer REQUIRED)
 	endif()
-	list(APPEND LIBS SDL2_mixer::SDL2_mixer)
+	list(APPEND LIBS SDL3_mixer::SDL3_mixer)
 	add_compile_definitions(${PROJECT_NAME} MIXER_ENABLED)
 	list(APPEND SOURCES ${SRC_PATH}/mixer.cpp)
 	list(APPEND HEADERS ${SRC_PATH}/mixer.h)
@@ -53,9 +54,9 @@ endif()
 
 if (ENABLE_TTF)
 	if (NOT ANDROID)
-		find_package(SDL2_ttf REQUIRED)
+		find_package(SDL3_ttf REQUIRED)
 	endif()
-	list(APPEND LIBS SDL2_ttf::SDL2_ttf)
+	list(APPEND LIBS SDL3_ttf::SDL3_ttf)
 	add_compile_definitions(${PROJECT_NAME} TTF_ENABLED)
 	list(APPEND SOURCES ${SRC_PATH}/font.cpp)
 	list(APPEND HEADERS ${SRC_PATH}/font.h)
@@ -63,9 +64,9 @@ endif()
 
 if (ENABLE_NET)
 	if (NOT ANDROID)
-		find_package(SDL2_net REQUIRED)
+		find_package(SDL3_net REQUIRED)
 	endif()
-	list(APPEND LIBS SDL2_net::SDL2_net)
+	list(APPEND LIBS SDL3_net::SDL3_net)
 	add_compile_definitions(${PROJECT_NAME} NET_ENABLED)
 	list(APPEND SOURCES ${SRC_PATH}/networking.cpp)
 	list(APPEND HEADERS ${SRC_PATH}/networking.h)
