install and find_packages only if run from toplevel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,18 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
+if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
+    set(SUPERNOVA_ROOTPROJECT ON)
+else()
+    set(SUPERNOVA_ROOTPROJECT OFF)
+endif()
 
 option(ENABLE_IMAGE "Enables SDL_image support." ON)
 option(ENABLE_MIXER "Enables SDL_mixer support." ON)
 option(ENABLE_TTF "Enables SDL_ttf support." ON)
 option(ENABLE_NET "Enables SDL_net support." ON)
 
-if (NOT (ANDROID OR MSVC))
+if (SUPERNOVA_ROOTPROJECT)
 	set(CMAKE_INSTALL_PREFIX $ENV{PREFIX})
 	include(GNUInstallDirs)
 endif()
@@ -32,12 +37,12 @@ set(SOURCES ${SRC_PATH}/core.cpp)
 
 set(LIBS SDL3::SDL3)
 
-if (NOT (ANDROID OR MSVC))
+if (SUPERNOVA_ROOTPROJECT)
 	find_package(SDL3 REQUIRED)
 endif()
 
 if (ENABLE_IMAGE)
-	if (NOT (ANDROID OR MSVC))
+	if (SUPERNOVA_ROOTPROJECT)
 		find_package(SDL3_image REQUIRED)
 	endif()
 	list(APPEND LIBS SDL3_image::SDL3_image)
@@ -47,7 +52,7 @@ if (ENABLE_IMAGE)
 endif()
 
 if (ENABLE_MIXER)
-	if (NOT (ANDROID OR MSVC))
+	if (SUPERNOVA_ROOTPROJECT)
 		find_package(SDL3_mixer REQUIRED)
 	endif()
 	list(APPEND LIBS SDL3_mixer::SDL3_mixer)
@@ -57,7 +62,7 @@ if (ENABLE_MIXER)
 endif()
 
 if (ENABLE_TTF)
-	if (NOT (ANDROID OR MSVC))
+	if (SUPERNOVA_ROOTPROJECT)
 		find_package(SDL3_ttf REQUIRED)
 	endif()
 	list(APPEND LIBS SDL3_ttf::SDL3_ttf)
@@ -67,7 +72,7 @@ if (ENABLE_TTF)
 endif()
 
 if (ENABLE_NET)
-	if (NOT (ANDROID OR MSVC))
+	if (SUPERNOVA_ROOTPROJECT)
 		find_package(SDL3_net REQUIRED)
 	endif()
 	list(APPEND LIBS SDL3_net::SDL3_net)
@@ -87,7 +92,7 @@ target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBS})
 # Setting which header files should be supplied with the library
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${HEADERS}")
 
-if (NOT (ANDROID OR MSVC))
+if (SUPERNOVA_ROOTPROJECT)
 	install(TARGETS ${PROJECT_NAME}
 			EXPORT "${PROJECT_NAME}-config"
 			RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
